# development-governor

./: CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  pyproject.toml
.github/workflows/: ci.yml
acceptance/: beta2_acceptance.py
docs/evals/: beta3-governor-skill-flow.json
docs/public/: control-boundary.md  governor-skill-responsibility-contract.md  project-aware-spec-review.md  quickstart.md
docs/releases/: v0.1.0-beta.1.md  v0.1.0-beta.2.md  v0.1.0-beta.3.md  v0.1.0-beta.4.md
docs/superpowers/plans/: 2026-07-16-beta3-hardening.md  2026-07-18-beta4-runtime-parity-release.md  2026-07-19-review-campaign-revision-stability.md  2026-07-19-review-campaign-segmentation.md  2026-07-19-review-finalization-recovery.md
examples/: project-policy.example.json  project-review-capsule.example.json  task-capsule.example.json
scripts/: run_development_governor.py
src/development_governor/: __init__.py  __main__.py  cli.py  default_activation.py  hook_guard.py  lineage.py  project_entry.py  project_review.py  public_demo.py  rerun.py  runner.py  skill_candidate.py  stage_control.py  supervisor.py
tests/: test_default_activation.py  test_default_entry_integration.py  test_development_governor.py  test_hook_guard.py  test_lineage_ledger.py  test_project_entry.py  test_project_review.py  test_public_release.py  test_rerun_gate.py  test_skill_candidate.py  test_stage_control.py  test_supervisor.py
