[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "development-governor"
version = "0.1.0b4"
description = "A deterministic control layer for bounded Codex development runs"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "Apache-2.0"}
authors = [{name = "Rossky"}]
keywords = ["codex", "ai-agents", "developer-tools", "governance", "multi-agent"]
classifiers = [
  "Development Status :: 4 - Beta",
  "License :: OSI Approved :: Apache Software License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
]
dependencies = []

[project.urls]
Homepage = "https://github.com/rossky094-hub/development-governor"
Repository = "https://github.com/rossky094-hub/development-governor"
Issues = "https://github.com/rossky094-hub/development-governor/issues"

[project.scripts]
development-governor = "development_governor.cli:main"
governor = "development_governor.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
include = ["development_governor*"]
